# Online_store

./: .flake8  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_print_mixin_py.html  z_a44f0ac069e85531_test_product_py.html
src/: main.py  my_class.py  utils.py
tests/: conftest.py  test_category.py  test_print_mixin.py  test_product.py
