[project]
name = "online-store"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor_Poplavskiy",email = "epoplavskiy223@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.18.1"



[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
max-complexity = 18
ignore = "E203, E266, E501, W503"
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations"
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Игнорировать определенные файлы/папки
exclude = [
    "^.venv/",
    "^build/",
    "^dist/",
    "^migrations/",
    "__pycache__"
]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "celery.*",
    "flask.*"
]
ignore_missing_imports = true

# Для тестов можно сделать менее строгие настройки
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "test_*",
    "*_test"
]
disallow_untyped_defs = false
disallow_incomplete_defs = false